2009-11-29  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_option.c: CHANGE： The list of lyric path and filename pattern are improved.

	* src/ol_player_rhythmbox.c: Rhythmbox doen't return false when stopped.
	The elapsed time of Rhythmbox won't jump when resume playing.

2009-11-28  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_module.c: FIX: Remove fload reference of osd_window

	* src/ol_player_rhythmbox.c (ol_player_rhythmbox_get_controller): FIX: The handler of get_capacity of rhythmbox is set correctly.
	ADD: Rhythmbox now supports all player futures

2009-11-24  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c (is_file_exist): FIX: Check if the type of file is a regular file
	CHANGE: quit when no player available

	* src/ol_player_exaile03.c: FIX: Check status before getting music info or length for exaile 0.3

2009-11-22  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_module.c (ol_osd_module_init_osd): Fix: translucent-on-mouse-over option does not work until the setting is changed after launched

2009-11-04  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_app.h: Add global interface to get the infomation of the application

	* src/ol_menu.c: Use the menu defined in glade file instead creating one manually
	Add player controlling menu items

	* src/ol_player_banshee.c: FIX: Next is now available on Banshee

2009-10-31  Tiger Soldier  <tigersoldi@gmail.com>

	* data/dialogs.glade: Improved UI for lrc location

	* src/ol_option.c (init_list): Make the list dragable to reorder.

2009-10-29  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_option.c: Add UI for the lrc path and filename

	* src/ol_lrc_parser.c: Fix: LRC file will not append some padding characters after setting its offset.

	* src/ol_player_mpris.c (ol_player_mpris_proxy_free): Issue 22: The function declaration is fixed

2009-10-28  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c : Adds LRC pattern support
